# finaccess

./: .gitattributes  README.md  pyproject.toml
src/finaccess/: 2024_Finaccess_Publicdata.csv  2024_Finaccess_Publicdata.xlsx  2024_Finaccess_Publicdata_from_script.csv  2024_Finaccess_Publicdata_variables.csv  __init__.py  columns.py  create_ddl.py  create_finaccess_2024_postgresql.sql  csv_to_postgres_types.py  exp.py  generate_csvs.py  logging_config.py  read_excel.py  table_groups.py  to_csv.py  to_parquet.py  values.py
